--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,12 @@ border-top: 1px solid;
   flex: 1;
   justify-content: flex-start;
   align-items: flex-start;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 .SideMenu{
-
+  height: 100%;
 }
 .PageContent{
   padding-left: 12px;
-  
+
 }
